contact page modified

--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,7 @@
                   <p>Feel free to reach out to us with any questions, inquiries, or staffing requirements you may have. Our experienced</p>
                 </div>
                 <div class="space10"></div>
-                <form action="/success" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+                <form method="POST" data-netlify="true" netlify-honeypot="bot-field">
                   <input type="hidden" name="form-name" value="contact">
                   <div class="row">
                     <div class="col-md-6">
