--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
 
                   <div class="space30"></div>
                   <div class="hero1-buttons" data-aos="fade-right" data-aos-duration="1200">
-                    <a class="theme-btn1" href="service.html">Start Your Search <span><i class="fa-solid fa-arrow-right"></i></span></a>
-                    <a class="theme-btn2" href="service.html">Discover More <span><i class="fa-solid fa-arrow-right"></i></span></a>
+                  <!--  <a class="theme-btn1" href="service.html">Start Your Search <span><i class="fa-solid fa-arrow-right"></i></span></a>
+                    <a class="theme-btn2" href="service.html">Discover More <span><i class="fa-solid fa-arrow-right"></i></span></a>-->
                   </div>
                 </div>
               </div>
@@ -508,9 +508,9 @@
                     </div>
                   </div>
                   <div class="space30"></div>
-                  <div class="" data-aos="fade-left" data-aos-duration="1100">
+                 <!-- <div class="" data-aos="fade-left" data-aos-duration="1100">
                     <a class="theme-btn1" href="about.html">About US <span><i class="fa-solid fa-arrow-right"></i></span></a>
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
@@ -1222,37 +1222,27 @@
       <div class="contact1 sp">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-lg-6">
+            <div class="col-sm-6">
               <div class="heading1-w">
                 <span class="span" data-aos="zoom-in-left" data-aos-duration="700">Contact Us</span>
                 <h2 class="text-anime-style-3">Get in Touch Let's Start the Conversation</h2>
                 <div class="space16"></div>
                 <p data-aos="fade-right" data-aos-duration="900">We're here to help you find the right staffing solutions for your needs. Whether you're a company looking to hire top talent or a candidate seeking your next career opportunity,</p>
-
-                <div class="" data-aos="fade-right" data-aos-duration="800">
-                  <div class="contact1-box">
-                    <div class="icon">
-                      <img src="assets/img/icons/contact-icon1.png" alt="">
-                    </div>
-                    <div class="heading">
-                      <p>Gives us a Call</p>
-                      <a href="tel:+919081996997">+91 9081996997</a>
-                    </div>
-                  </div>
-                </div>
-  
-                <div class="" data-aos="fade-right" data-aos-duration="1100">
-                  <div class="contact1-box">
-                    <div class="icon">
-                      <img src="assets/img/icons/contact-icon2.png" alt="">
-                    </div>
-                    <div class="heading">
-                      <p>Send me Mail</p>
-                      <a href="mailto:umed.searchends@gmail.com">umed.searchends@gmail.com</a>
+                <div class="row">
+                  <div class="col-sm-12" data-aos="fade-right" data-aos-duration="800">
+                    <div class="contact1-box">
+                      <div class="icon">
+                        <img src="assets/img/icons/contact-icon1.png" alt="">
+                      </div>
+                      <div class="heading">
+                        <p>Gives us a Call</p>
+                        <a href="tel:+919081996997">+91 9081996997</a>
+                      </div>
                     </div>
                   </div>
-                </div>
-  
+    
+                
+              </div>
               </div>
             </div>
   
@@ -1481,16 +1471,16 @@
       =====BLOG AREA END=======-->
 
             <!--===== CTA AREA START =======-->
-
+<!--
             <div class="cta">
               <div class="container">
                 <div class="row cta-border align-items-center">
                   <div class="col-lg-6">
                     <div class="heading1-w">
-                      <h2>Stay Ahead: Subscribe to our Newsletter for the Latest Opportunities!</h2>
+                      <h2>Stay Ahead: Subscribe to our Newsletter for the Latest Opportunities!</h2>-->
                       <!--<div class="space16"></div>
                       <p>Feel free to customize this paragraph to better reflect the <br> specific services offered by your IT solution & the unique </p>-->
-                    </div>
+   <!--                 </div>
                   </div>
 
                   <div class="col-lg-6">
@@ -1506,7 +1496,7 @@
                 </div>
               </div>
             </div>
-
+-->
             <!--===== CTA AREA START =======-->
 
             <!--===== FOOTER AREA START =======-->
