modified landing page

--- a/index.html
+++ b/index.html
@@ -316,11 +316,11 @@
                   <div class="space16"></div>
                   <p data-aos="fade-right" data-aos-duration="1000">Our tailored staffing solutions streamline the hiring process, <br> saving you time and resources while ensuring the perfect fit.</p>
 
-                  <div class="space30"></div>
+                  <!--<div class="space30"></div>
                   <div class="hero1-buttons" data-aos="fade-right" data-aos-duration="1200">
-                  <!--  <a class="theme-btn1" href="service.html">Start Your Search <span><i class="fa-solid fa-arrow-right"></i></span></a>
-                    <a class="theme-btn2" href="service.html">Discover More <span><i class="fa-solid fa-arrow-right"></i></span></a>-->
-                  </div>
+                    <a class="theme-btn1" href="service.html">Start Your Search <span><i class="fa-solid fa-arrow-right"></i></span></a>
+                    <a class="theme-btn2" href="service.html">Discover More <span><i class="fa-solid fa-arrow-right"></i></span></a>
+                  </div>-->
                 </div>
               </div>
 
@@ -797,35 +797,6 @@
                           </ul>
                       </div>
                       <!--Portfolio Two Single End-->
-                        <!--Portfolio Two Single Start-->
-                        <div class="project-two__single-box">
-                          <ul class="project-two__box project-two__box2 list-unstyled">
-                              <li class="active">
-                                  <div class="project-two__box-content project-two__box-content2">
-                                      <div class="single-project-two__bg"
-                                          style="background-image: url(assets/img/project/project1-img3.png);">
-                                      </div>
-                                      <div class="img-holder-img-bg"></div>
-                                      <div class="project-two__box-content-inner-icon">
-                                          <a href="assets/img/service/service1-img1.png" class="img-popup"><i
-                                                  class="icon-next"></i></a>
-                                      </div>
-                                      <div class="project-two__box-content-inner">
-                                        <div class="project-two__box-content-inner-wrapper">
-                                            <p>Staffing Service </p>
-                                            <h4><a href="project-details.html">Demonstrating Our Expertise</a></h4>
-                                        </div>
-                                        <div class="icon">
-                                          <a href="project-details.html"><i class="fa-solid fa-arrow-right"></i></a>
-                                        </div>
-                                    </div>
-                                  </div>
-                              </li>
-                          </ul>
-                      </div>
-                      <!--Portfolio Two Single End-->
-
-
                     </div>
                 </div>
             </div>
@@ -1056,7 +1027,7 @@
       <div class="contact1 sp">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-sm-6">
+            <div class="col-lg-6 pb-2">
               <div class="heading1-w">
                 <span class="span" data-aos="zoom-in-left" data-aos-duration="700">Contact Us</span>
                 <h2 class="text-anime-style-3">Get in Touch Let's Start the Conversation</h2>
