--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
        <div class="container">
          <div class="row justify-content-center">
            <div class="col-12">
-             <div class="header-elements  d-flex justify-content-center">
+             <div class="header-elements ">
                <div class="site-logo">
                  <a href="index.html">
                   <img src="assets/img/logo/header-logo1.png" alt="">
@@ -143,7 +143,7 @@
  
                      
                  </ul>
-               </div>
+               </div> -->
 
 
 
@@ -152,7 +152,7 @@
                       <a class="theme-btn1" href="contact.html">Get A Quote <span><i class="fa-solid fa-arrow-right"></i></span></a>
                     </div>
                </div>
--->
+
              </div>
            </div>
          </div>
