--- a/contact.html
+++ b/contact.html
@@ -255,7 +255,7 @@
                           </div>
                           <div class="space10"></div>
             
-                          <form method="POST" data-netlify="true" netlify-honeypot="bot-field">
+                          <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" onSubmit="submit">
                             <input type="hidden" name="form-name" value="contact">
                             <div class="row">
                               <div class="col-md-6">
