--- a/contact.html
+++ b/contact.html
@@ -257,6 +257,7 @@
             
                           <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" onSubmit="submit">
                             <input type="hidden" name="form-name" value="contact">
+                            <input class="d-none" name="bot-field">
                             <div class="row">
                               <div class="col-md-6">
                                 <div class="single-input">
