Added communicare and other small changes

--- a/searchendsadvisor.html
+++ b/searchendsadvisor.html
@@ -77,6 +77,11 @@
              <img src="assets/img/logo/searchendsINIM.png" alt="">
             </a>
           </div>
+          <div class="site-logo">
+            <a href="CommunicareProductions.html">
+             <img src="assets/img/logo/SearchendsCommuni.png" alt="">
+            </a>
+          </div>
 
           <div class="header2-buttons">
              <div class="button">
@@ -121,10 +126,11 @@
            <div class="mobile-nav">
              <ul>
                <li><a href="index.html">SearchEnds Home</a></li>
-               <li><a href="searchendsadvisor.html">SearchEnds Search Advisors Services Pvt Ltd</a></li>
-               <li><a href="searchendsrx.html">SearchEnds Rx Chem Services Pvt Ltd</a></li>
-               <li><a href="searchendspeoplesoft.html">SearchEnds PeopleSoft Pvt Ltd</a></li>
-               <li><a href="searchendsdei.html">SearchEnds DEI Sensitization</a></li>
+               <li><a href="searchendsadvisor.html">Searchends Search Advisors Services Pvt Ltd</a></li>
+               <li><a href="searchendsrx.html">Searchends Rx Chem Services Pvt Ltd</a></li>
+               <li><a href="searchendspeoplesoft.html">Searchends PeopleSoft Pvt Ltd</a></li>
+               <li><a href="searchendsdei.html">Searchends DEI Sensitization</a></li>
+               <li><a href="CommunicareProductions.html"> Communicare Production</a></li>
              </ul>
              
              <div class="mobile-button">
@@ -166,11 +172,11 @@
              <div class="contact-infos">
                <h3>Our Location</h3>
                <ul class="social-icon">
-                 <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                 <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                 <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            </ul>
+                <li><a href="https://in.linkedin.com/company/searchends"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com/searchendz/"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+           </ul>
              </div>
    
            </div>
@@ -456,11 +462,11 @@
                           <p>Search Ends has evolved into an organization of excellence within the talent acquisition landscape, commemorating two decades of steadfast dedication to our valued clients. </p>
                         </div>
                         <ul class="social-icon">
-                             <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                             <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                             <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        </ul>
+                          <li><a href="https://in.linkedin.com/company/searchends"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                          <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                          <li><a href="https://www.facebook.com/searchendz/"><i class="fa-brands fa-facebook"></i></a></li>
+                          <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                     </ul>
                    </div>
               </div>
 
@@ -484,6 +490,7 @@
                              <li><a href="searchendsrx.html">Searchends Rx Chem Services</a></li>
                              <li><a href="searchendspeoplesoft.html">SearchEnds PeopleSoft Pvt Ltd</a></li>
                              <li><a href="searchendsdei.html"> Search Ends Inclusions Impact</a></li>
+                             <li><a href="CommunicareProductions.html"> Search Ends Communicare Production</a></li>
                         </ul>
                    </div>
               </div>
