--- a/searchendspeoplesoft.html
+++ b/searchendspeoplesoft.html
@@ -79,7 +79,11 @@
              <img src="assets/img/logo/searchendsINIM.png" alt="">
             </a>
           </div>
-
+          <div class="site-logo">
+            <a href="CommunicareProductions.html">
+             <img src="assets/img/logo/SearchendsCommuni.png" alt="">
+            </a>
+          </div>
           <div class="header2-buttons">
              <div class="button">
                <a class="theme-btn1" href="contact.html">Contact Us <span><i class="fa-solid fa-arrow-right"></i></span></a>
@@ -125,6 +129,7 @@
               <li><a href="searchendsrx.html">SearchEnds Rx Chem Services Pvt Ltd</a></li>
               <li><a href="searchendspeoplesoft.html">SearchEnds PeopleSoft Pvt Ltd</a></li>
               <li><a href="searchendsdei.html">SearchEnds DEI Sensitization</a></li>
+              <li><a href="CommunicareProductions.html"> Communicare Production</a></li>
              </ul>
              
              <div class="mobile-button">
@@ -166,11 +171,11 @@
              <div class="contact-infos">
                <h3>Our Location</h3>
                <ul class="social-icon">
-                 <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                 <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                 <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            </ul>
+                <li><a href="https://in.linkedin.com/company/searchends"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com/searchendz/"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+           </ul>
              </div>
    
            </div>
@@ -216,7 +221,7 @@
                                     <div class="space16"></div>
                                     <p>SearchEnds PeopleSoft Pvt Ltd is a strategic consulting, staffing and technology services company.
                                       We mobilize the right people, skills and technologies to help organizations improve their business
-                                      performance. We provide key staf to employers allowing them to meet diversity goals and to
+                                      performance. We provide key staff to employers allowing them to meet diversity goals and to
                                       promote equal opportunity in employment.<br>
                                       As (Company Character), SearchEnds PeopleSoft Pvt Ltd is committed to creating innovative, flexible
                                       solutions for government and commercial clients.</p>
@@ -374,11 +379,11 @@
                                       <p>Search Ends has evolved into an organization of excellence within the talent acquisition landscape, commemorating two decades of steadfast dedication to our valued clients. </p>
                                     </div>
                                     <ul class="social-icon">
-                                         <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                         <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                                         <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                                         <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                    </ul>
+                                      <li><a href="https://in.linkedin.com/company/searchends"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                      <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                                      <li><a href="https://www.facebook.com/searchendz/"><i class="fa-brands fa-facebook"></i></a></li>
+                                      <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                 </ul>
                                </div>
                           </div>
       
@@ -401,7 +406,8 @@
                                          <li><a href="searchendsadvisor.html">Searchends Search Advisors Pvt Ltd</a></li>
                                          <li><a href="searchendsrx.html">Searchends Rx Chem Services</a></li>
                                          <li><a href="searchendspeoplesoft.html">SearchEnds PeopleSoft Pvt Ltd</a></li>
-                                         <li><a href="searchendsdei.html"> Search Ends Inclusions Impact</a></li>
+                                         <li><a href="searchendsdei.html"> SearchEnds Inclusions Impact</a></li>
+                                         <li><a href="CommunicareProductions.html"> Communicare Production</a></li>
                                     </ul>
                                </div>
                           </div>
