--- a/searchendsrx.html
+++ b/searchendsrx.html
@@ -77,6 +77,11 @@
              <img src="assets/img/logo/searchendsINIM.png" alt="">
             </a>
           </div>
+          <div class="site-logo">
+            <a href="CommunicareProductions.html">
+             <img src="assets/img/logo/SearchendsCommuni.png" alt="">
+            </a>
+          </div>
 
           <div class="header2-buttons">
              <div class="button">
@@ -125,6 +130,7 @@
               <li><a href="searchendsrx.html">SearchEnds Rx Chem Services Pvt Ltd</a></li>
               <li><a href="searchendspeoplesoft.html">SearchEnds PeopleSoft Pvt Ltd</a></li>
               <li><a href="searchendsdei.html">SearchEnds DEI Sensitization</a></li>
+              <li><a href="CommunicareProductions.html"> Communicare Production</a></li>
              </ul>
              
              <div class="mobile-button">
@@ -166,11 +172,11 @@
              <div class="contact-infos">
                <h3>Our Location</h3>
                <ul class="social-icon">
-                 <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                 <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                 <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            </ul>
+                <li><a href="https://in.linkedin.com/company/searchends"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com/searchendz/"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+           </ul>
              </div>
    
            </div>
@@ -343,11 +349,11 @@
                                     <p>Search Ends has evolved into an organization of excellence within the talent acquisition landscape, commemorating two decades of steadfast dedication to our valued clients. </p>
                                   </div>
                                   <ul class="social-icon">
-                                       <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                       <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                                       <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                                       <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                  </ul>
+                                    <li><a href="https://in.linkedin.com/company/searchends"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                                    <li><a href="https://www.facebook.com/searchendz/"><i class="fa-brands fa-facebook"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                               </ul>
                              </div>
                         </div>
     
@@ -370,7 +376,8 @@
                                        <li><a href="searchendsadvisor.html">Searchends Search Advisors Pvt Ltd</a></li>
                                        <li><a href="searchendsrx.html">Searchends Rx Chem Services</a></li>
                                        <li><a href="searchendspeoplesoft.html">SearchEnds PeopleSoft Pvt Ltd</a></li>
-                                       <li><a href="searchendsdei.html"> Search Ends Inclusions Impact</a></li>
+                                       <li><a href="searchendsdei.html"> SearchEnds Inclusions Impact</a></li>
+                                       <li><a href="CommunicareProductions.html"> Communicare Production</a></li>
                                   </ul>
                              </div>
                         </div>
@@ -385,7 +392,7 @@
                                       <img src="assets/img/icons/footer-icon1.png" alt="">
                                     </div>
                                     <div class="pera">
-                                      <a href="tel:+919081996997">+91 9081996997</a>
+                                      <a href="tel:+919879820969">+91 9879820969</a>
                                     </div>
                                   </div>
 
@@ -394,7 +401,7 @@
                                       <img src="assets/img/icons/footer-icon2.png" alt="">
                                     </div>
                                     <div class="pera">
-                                      <a href="mailto:umed.searchends@gmail.com">umed.searchends@gmail.com</a>
+                                      <a href="mailto:amol.searchrx@gmail.com">amol.searchrx@gmail.com</a>
                                     </div>
                                   </div>
 
