updated Chandrika mam's Pic

--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
             <div class="col-lg-3 col-md-6">
               <div class="team1-box overlay-anim" data-aos="zoom-in-up" data-aos-duration="700" data-toggle="modal" data-target="#teamModal7">
                 <div class="image">
-                  <img src="assets/img/team/Chandrika maam.jpg" alt="">
+                  <img src="assets\img\team\Chandrika maam.jpeg" alt="">
                 </div>
                 <div class="heading-area">
                   <div class="heading1">
@@ -1095,7 +1095,7 @@
             <div class="modal-body">
               <div class="row">
                 <div class="col-md-4">
-                  <img src="assets/img/team/Chandrika maam.jpg" alt="Siddharth Ayare" class="img-fluid rounded-circle mb-3">
+                  <img src="assets\img\team\Chandrika maam.jpeg" alt="Siddharth Ayare" class="img-fluid rounded-circle mb-3">
                   <div class="text-center">
                     <h6 class="font-weight-bold">Executive Director, Search Ends</h6>
                     <div class="social-icons mt-3">
