Spelling error on Service page

--- a/service-details-left.html
+++ b/service-details-left.html
@@ -486,7 +486,7 @@
                                 <div class="row">
                                     <div class="col-lg-6 m-auto text-center">
                                         <div class="heading1">
-                                            <h2>View More Servicve</h2>
+                                            <h2>View More Service</h2>
                                         </div>
                                     </div>
                                 </div>
