--- a/service-details-right.html
+++ b/service-details-right.html
@@ -489,7 +489,7 @@
                                 <div class="row">
                                     <div class="col-lg-6 m-auto text-center">
                                         <div class="heading1">
-                                            <h2>View More Servicve</h2>
+                                            <h2>View More Service</h2>
                                         </div>
                                     </div>
                                 </div>
